k8s/postgres-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: devops
spec:
  selector:
    app: postgres-exporter
  ports:
    - protocol: TCP
      port: 9187
      targetPort: 9187
